--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<h1>
-  {{title}}
-</h1>
+<app-signup></app-signup>
+<!--<button (click)="increment()">+</button>
+<button (click)="decrement()">-</button>
+<h1>{{state$ | async}}</h1>-->
